# zrlang

./: .gitignore  CMakeLists.txt
c-compiler/: ast.c  ast.h  compiler.c  compiler.h  context.c  context.h  main.c  string-slice.h
c-compiler/tree-sitter-zrlang/: grammar.js  tree-sitter.json
c-compiler/tree-sitter-zrlang/bindings/c/: tree-sitter-zrlang.pc.in
c-compiler/tree-sitter-zrlang/bindings/c/tree_sitter/: tree-sitter-zrlang.h
c-compiler/tree-sitter-zrlang/src/: grammar.json  node-types.json  parser.c
compiler/: grammar.lark  lang_ast.py  main.py
compiler/compiler/: __init__.py  compile.py  unit_context.py
runtime/: Hasher.c  Object.c  runtime.c
runtime/include/: zre.h  zre_utils.h
runtime/stdlib/: Array.c  Dictionary.c  Hasher.c  LinkedList.c  Object.c  RawBuffer.c  String.c  builtins.c
test/rt-playground/: DebugArray.c  School.c  SuperUser.c  User.c  UserArray.c  main.c
